Continuazione (header/nav)

--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="un">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Toboolist</title>
 </head>
 <body>
     <!-- Logo -->
-    <header></header>
+    <header>
+        <img src="img/Logo.png" alt="Logo">
+        <span id="logo">Toboolist</span>
+    </header>
 
     <main>
         <!-- Navigazione -->
-        <nav></nav>
+        <nav>
+            <span id="add-task" class="add">Add Task</span>
+            <span id="add-section" class="add">Add Section</span>
+        </nav>
         
         <!-- New Task -->
         <section></section>
